--- a/index.html
+++ b/index.html
@@ -206,63 +206,67 @@
                     </div>
                 </a>
 
-                <div class="project-card-2" id="Finlandia">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                Finlandia Infographic
-                            </h3>
-                            <p class="p3">
-                                Print and Publication
-                            </p>
-                        </div>
-                        <div class="pc1-button">
-                            <a href="#">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                            </a>
-                        </div>
-                    </div>
-                    <img src="./Website Images/Finlandia Infographic/Finlandia Kiosk Mockup.png" alt="Finlandia Kiosk Mockup" class="pc1-img" id="finlandia-mockup">
-                </div>
 
-                
-                <div class="project-card-2" id="cookbook">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                Finlandia Infographic
-                            </h3>
-                            <p class="p3">
-                                Print and Publication
-                            </p>
-                        </div>
-                        <div class="pc1-button">
-                            <a href="#">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                            </a>
-                        </div>
-                    </div>
-                    <img src="./Website Images/Mom's Cookbook/cookbook mockup front.png" alt="Mom's Cookbook Mockup" class="pc1-img" id="cookbook-mockup">
-                </div>
 
-                <div class="project-card-2" id="uk-social">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                UK Social Media Posts
-                            </h3>
-                            <p class="p3">
-                                Branding and Marketing
-                            </p>
+                <a href="./finlandia.html" class="link-wrapper"> 
+                    <div class="project-card-2" id="Finlandia">
+                        <div class="pc1-main-content">
+                            <div class="pc1-content">
+                                <h3>
+                                    Finlandia Infographic
+                                </h3>
+                                <p class="p3">
+                                    Print and Publication
+                                </p>
+                            </div>
+                            <div class="pc1-button">
+                                    <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </div>
                         </div>
-                        <div class="pc1-button">
-                            <a href="#">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                            </a>
-                        </div>
+                        <img src="./Website Images/Finlandia Infographic/Finlandia Kiosk Mockup.png" alt="Finlandia Kiosk Mockup" class="pc1-img" id="finlandia-mockup">
                     </div>
-                    <img src="./Website Images/UK Social Media/UK Phone Post Grouping.png" alt="University of Kentucky Social Media Mockups" class="pc1-img" id="social-mockup">
-                </div>
+                </a>
+
+
+
+                <a href="./cookbook.html" class="link-wrapper"> 
+                    <div class="project-card-2" id="cookbook">
+                        <div class="pc1-main-content">
+                            <div class="pc1-content">
+                                <h3>
+                                    Finlandia Infographic
+                                </h3>
+                                <p class="p3">
+                                    Print and Publication
+                                </p>
+                            </div>
+                            <div class="pc1-button">
+                                    <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </div>
+                        </div>
+                        <img src="./Website Images/Mom's Cookbook/cookbook mockup front.png" alt="Mom's Cookbook Mockup" class="pc1-img" id="cookbook-mockup">
+                    </div>
+                </a>
+
+
+                <a href="./social-media.html" class="link-wrapper"> 
+                    <div class="project-card-2" id="uk-social">
+                        <div class="pc1-main-content">
+                            <div class="pc1-content">
+                                <h3>
+                                    UK Social Media Posts
+                                </h3>
+                                <p class="p3">
+                                    Branding and Marketing
+                                </p>
+                            </div>
+                            <div class="pc1-button">
+                                    <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </div>
+                        </div>
+                        <img src="./Website Images/UK Social Media/UK Phone Post Grouping.png" alt="University of Kentucky Social Media Mockups" class="pc1-img" id="social-mockup">
+                    </div>
+                </a>
 
         </div>
 
@@ -316,15 +320,15 @@
         </div>
 
         <div class="skill-icons section-padding hidden">
-            <div class="icon-box"><img src="./Website Images/Icons/Adobe-Icon.svg" alt="Adobe Icon"><div class="icon-desc">Adobe</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/Illustrator-icon.svg" alt="Illustrator icon"><div class="icon-desc">Illustrator</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/InDesign-icon.svg" alt="InDesign Icon"><div class="icon-desc">InDesign</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/photoshop-icon.svg" alt="Photoshop Icon"><div class="icon-desc">Photoshop</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/Figma-Icon.svg" alt="Figma Icon"><div class="icon-desc">Figma</div></div>
-            <div class="icon-box" id="ae-icon-box"><img src="./Website Images/Icons/after effects-icon.svg" alt="After Effects Icon"><div class="icon-desc">After Effects</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/html-icon.svg" alt="HTML Icon"><div class="icon-desc">HTML</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/css-icon.svg" alt="CSS Icon"><div class="icon-desc">CSS</div></div>
-            <div class="icon-box"><img src="./Website Images/Icons/JavaScript-icon.svg" alt="JavaScript Icon"><div class="icon-desc">JavaScript</div></div>
+            <div class="icon-box" id="skill-1"><img src="./Website Images/Icons/Adobe-Icon.svg" alt="Adobe Icon"><div class="icon-desc">Adobe</div></div>
+            <div class="icon-box" id="skill-2"><img src="./Website Images/Icons/Illustrator-icon.svg" alt="Illustrator icon"><div class="icon-desc">Illustrator</div></div>
+            <div class="icon-box" id="skill-3"><img src="./Website Images/Icons/InDesign-icon.svg" alt="InDesign Icon"><div class="icon-desc">InDesign</div></div>
+            <div class="icon-box" id="skill-4"><img src="./Website Images/Icons/photoshop-icon.svg" alt="Photoshop Icon"><div class="icon-desc">Photoshop</div></div>
+            <div class="icon-box" id="skill-5"><img src="./Website Images/Icons/Figma-Icon.svg" alt="Figma Icon"><div class="icon-desc">Figma</div></div>
+            <div class="icon-box" id="skill-6"><img src="./Website Images/Icons/after effects-icon.svg" alt="After Effects Icon"><div class="icon-desc">After Effects</div></div>
+            <div class="icon-box" id="skill-7"><img src="./Website Images/Icons/html-icon.svg" alt="HTML Icon"><div class="icon-desc">HTML</div></div>
+            <div class="icon-box" id="skill-8"><img src="./Website Images/Icons/css-icon.svg" alt="CSS Icon"><div class="icon-desc">CSS</div></div>
+            <div class="icon-box" id="skill-9"><img src="./Website Images/Icons/JavaScript-icon.svg" alt="JavaScript Icon"><div class="icon-desc">JavaScript</div></div>
         </div>  
 
         <div class="title-section section-padding hidden">
