--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,10 @@
 <body>
         <div class="project-nav-container">
 
-            <a href="#">
+            <a href="./llp.html">
                 <div class="project-card">
                     <div class="project-card-img">
-                            <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Dashboard.jpg" class="pc-img" alt="#">
+                            <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Project Card Dashboard View.jpg" class="pc-img" alt="#">
                     </div>
                     <div class="project-card-content">
                         <div class="project-card-type">
@@ -31,10 +31,10 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./pristine clean case study.html">
                 <div class="project-card">
                     <div class="project-card-img">
-                            <img src="./Website Images/Pristine Cline/About Mockup.png" class="pc-img" alt="#">
+                            <img src="./Website Images/Pristine Cline/PC Hero Desktop-Red.jpg" class="pc-img" alt="#">
                     </div>
                     <div class="project-card-content">
                         <div class="project-card-type">
@@ -50,8 +50,46 @@
                 </div>
             </a>
 
+            <a href="./katsbrune.html">
+                <div class="project-card">
+                    <div class="project-card-img">
+                            <img src="./Website Images/Katsbrune/The Katsbrune-Sign Mockup-2 (1).jpg" class="pc-img" alt="#">
+                    </div>
+                    <div class="project-card-content">
+                        <div class="project-card-type">
+                            <h4 class="pc-header">
+                                THe Katsbrune
+                            </h4>
+                            <p class="p3 pc-subheader">
+                                Brand Identity
+                            </p>
+                        </div>
+                        <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
+                    </div>
+                </div>
+            </a>
 
-            <a href="#">
+            <a href="./arrow.html">
+                <div class="project-card">
+                    <div class="project-card-img">
+                            <img src="./Website Images/Arrow/Arrow Project Card Hero Dashboard.jpg" class="pc-img" alt="#">
+                    </div>
+                    <div class="project-card-content">
+                        <div class="project-card-type">
+                            <h4 class="pc-header">
+                                Arrow Application
+                            </h4>
+                            <p class="p3 pc-subheader">
+                                UI/UX Design
+                            </p>
+                        </div>
+                        <img src="./Website Images/Icons/Arrow Icon-light grey.svg" class="arrow-pc" alt="arrow indicator">
+                    </div>
+                </div>
+            </a>
+
+
+            <a href="./ignite.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy.jpg" class="pc-img" alt="#">
@@ -70,7 +108,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./flyers.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/Alltech Flyers Downsized/Egalis Flyer Mockup.jpg" class="pc-img" alt="Alltech Flyer Mockup">
@@ -89,7 +127,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./ncba.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/NCBA 2024/NCBA Postcard Mockup_1.jpg" class="pc-img" alt="#">
@@ -108,7 +146,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./finlandia.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/Finlandia Infographic/Finlandia Mockup.jpg" class="pc-img" alt="#">
@@ -127,7 +165,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./cookbook.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/Mom's Cookbook/Cookbook Front Cover Mockup.jpg" class="pc-img" alt="#">
@@ -146,7 +184,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./social-media.html">
                 <div class="project-card">
                     <div class="project-card-img">
                             <img src="./Website Images/UK Social Media/UK Social Media Mockup.jpg" class="pc-img" alt="#">
