--- a/social-media.html
+++ b/social-media.html
@@ -24,7 +24,7 @@
         <div class="project-hero" id="intro">
             <div class="ph-content">
                 <h2 class="h10">
-                    Digital Branding and Marketing
+                    Branding and Marketing
                 </h2>
                 <h1 class="h9">
                     UK Social Media Posts
@@ -49,7 +49,7 @@
                 </h2>
             </div>
             <h6>
-                Generating Awareness, Recruiting Students, and Building a Stronger Community Through Social Media Marketing and Branding
+                Generating Awareness, Recruiting Students, and Building a Stronger Community Through Social Media Branding and Marketing
             </h6>
             <p>
                 These social media posts were created for the University of Kentucky’s College of Arts and Sciences social platforms. The posts were designed to bring awareness to certain events and holidays and keep followers engaged and informed.
