Almost there commit

--- a/Footer.html
+++ b/Footer.html
@@ -31,19 +31,19 @@
         </div> 
 
         <div class="footer-socials">
-            <a href="#">
+            <a href="mailto:benjaminqthomas@gmail.com" target="_blank" rel="noopener noreferrer">
                 <div class="icon-border">
                     <img src="./Website Images/Icons/Email Footer Icon.svg" class="footer-icon" alt="Email Icon">
                 </div>                
             </a>
 
-            <a href="#">
+            <a href="https://www.linkedin.com/in/ben-q-thomas" target="_blank" rel="noopener noreferrer">
                 <div class="icon-border">
                     <img src="./Website Images/Icons/LinkedIn Footer Icon.svg" class="footer-icon" alt="LinkedIn Icon">
                 </div>
             </a>
 
-            <a href="#">
+            <a href="https://www.instagram.com/benqthomas" target="_blank" rel="noopener noreferrer">
                 <div class="icon-border">
                     <img src="./Website Images/Icons/Instagram Footer Icon.svg" class="footer-icon" alt="Instagram Icon">
                  </div>
