--- a/Resume.html
+++ b/Resume.html
@@ -33,11 +33,14 @@
                 My Experience
             </h1>
             <p class="p2">
-                I’ve had the pleasure of working with small business owners and big corporations. Through my work, I’ve gained valuable experience in the realm of design and across various industries. Review, share, or download my resume here!
+                I specialize in crafting visually compelling and user-centered experiences across various industries. With expertise in UI/UX, and graphic design, I merge aesthetics with functionality to create designs that solve real-world problems while looking great. Check out my resume below!
             </p>
-            <button class="btn-primary">
-                Download Resume
-            </button>
+                <a href="./Website Images/Resume/Ben Thomas Resume_2025.pdf" target="_blank">
+                <button class="btn-primary">
+                    Download Resume
+                    <img id="download-icon" src="./Website Images/Icons/download icon-light grey.svg">
+                </button>
+             </a>
         </div>
         <div class="resume-img half round-img">
             <img src="./Website Images/Assets/Resume 3d Render-v2.png" alt="Ben Thomas Headshot">
