--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -55,7 +55,7 @@
 
     <main class="hidden">
 
-        <div class="main-section project-section" id="overview">
+        <div class="main-section project-section scroll-margin" id="overview">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -106,7 +106,7 @@
             </p>
         </div>
 
-        <div class="main-section project-section" id="problem-statement-pc">
+        <div class="main-section project-section scroll-margin" id="problem-statement-pc">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -159,7 +159,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="goals-pc">
+        <div class="main-section project-section scroll-margin" id="goals-pc">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -210,7 +210,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="solutions-pc">
+        <div class="main-section project-section scroll-margin" id="solutions-pc">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -268,7 +268,7 @@
 
 
 
-        <div class="main-section project-section" id="research">
+        <div class="main-section project-section scroll-margin" id="research">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -328,7 +328,7 @@
             <img src="./Website Images/Pristine Cline/PC Interview Insights.jpg" alt="interview insights">
         </div>
 
-        <div class="main-section project-section" id="design-process">
+        <div class="main-section project-section scroll-margin" id="design-process">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -392,7 +392,7 @@
             <img src="./Website Images/Pristine Cline/PC HiFi Feedback.jpg" alt="User Feedback">
         </div>
 
-        <div class="main-section project-section" id="final-design">
+        <div class="main-section project-section scroll-margin" id="final-design">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -411,8 +411,8 @@
             </p>
         </div>
         <div class="final-pc-buttons">
-            <a href="#"><button class="btn-primary">View the Live Prototype Here</button></a>
-            <a href="#"><button class="btn-primary">View the Live Site Here</button></a>
+            <a href="https://www.figma.com/proto/dedhYFq6YKJoHsgNExc2sH/PC-Website-Design?page-id=0%3A1&node-id=52-2412&viewport=-3670%2C421%2C0.15&t=Ag2h2HhxcR2jD3v8-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=52%3A2412&show-proto-sidebar=1" target="_blank"><button class="btn-primary">View the Live Prototype Here</button></a>
+            <a href="https://www.pristinecleanmobiledetail.com/" target="_blank"><button class="btn-primary">View the Live Site Here</button></a>
 
         </div>
 
@@ -425,7 +425,7 @@
 
         </div>
 
-        <div class="main-section project-section" id="results-pc">
+        <div class="main-section project-section scroll-margin" id="results-pc">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -474,7 +474,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="future-steps">
+        <div class="main-section project-section scroll-margin" id="future-steps">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -527,7 +527,7 @@
         </div>
 
 
-        <div class="main-section project-section" id="reflection">
+        <div class="main-section project-section scroll-margin" id="reflection">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -579,7 +579,7 @@
             </div>
         </div>
 
-        <div class="project-nav-buttons" id="other-projects" id="margin50">
+        <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
             <a href="./llp.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./katsbrune.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
