--- a/arrow.html
+++ b/arrow.html
@@ -57,7 +57,7 @@
 
     <main class="hidden">
 
-        <div class="main-section project-section" id="overview">
+        <div class="main-section project-section scroll-margin" id="overview">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -108,7 +108,7 @@
             </p>
         </div>
 
-        <div class="main-section project-section" id="problem-statement">
+        <div class="main-section project-section scroll-margin" id="problem-statement">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -161,7 +161,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="goals">
+        <div class="main-section project-section scroll-margin" id="goals">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -213,7 +213,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="results">
+        <div class="main-section project-section scroll-margin" id="results">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -232,7 +232,7 @@
             <img src="./Website Images/Arrow/Impact Thumbnail.jpg" alt="Arrow Impact Highlights">
         </div>
 
-        <div class="main-section project-section" id="research">
+        <div class="main-section project-section scroll-margin" id="research">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -288,7 +288,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="design-process">
+        <div class="main-section project-section scroll-margin" id="design-process">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -397,7 +397,7 @@
             <img src="./Website Images/Arrow/Arrow User Feedback.jpg" alt="User Feedback">
         </div>
 
-        <div class="main-section project-section" id="final-design">
+        <div class="main-section project-section scroll-margin" id="final-design">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -412,9 +412,9 @@
         
             </p>
         </div>
-        <div class="final-pc-buttons">
+        <!-- <div class="final-pc-buttons">
             <a href="#"><button class="btn-primary">View the Live Prototype Here</button></a>
-        </div>
+        </div> -->
 
         <div class="project-image round-img" id="final-designs">
             <img src="./Website Images/Arrow/Arrow Final Design.jpg" alt="Arrow Final Design Dashboard">
@@ -422,7 +422,7 @@
 
         
 
-        <div class="main-section project-section"  id="future-steps">
+        <div class="main-section project-section scroll-margin"  id="future-steps">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -472,7 +472,7 @@
         </div>
 
 
-        <div class="main-section project-section" id="reflection">
+        <div class="main-section project-section scroll-margin" id="reflection">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -524,7 +524,7 @@
             </div>
         </div>
 
-        <div class="project-nav-buttons" id="other-projects" id="margin50">
+        <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
             <a href="./katsbrune.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./ignite.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
