--- a/llp.html
+++ b/llp.html
@@ -56,7 +56,7 @@
 
     <main class="hidden">
 
-        <div class="main-section project-section" id="overview">
+        <div class="main-section project-section scroll-margin" id="overview">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -107,7 +107,7 @@
             </p>
         </div>
 
-        <div class="main-section project-section" id="problem-statement-LLP">
+        <div class="main-section project-section scroll-margin" id="problem-statement-LLP">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -163,7 +163,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="goals">
+        <div class="main-section project-section scroll-margin" id="goals">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -215,7 +215,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="solutions">
+        <div class="main-section project-section scroll-margin" id="solutions">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -274,7 +274,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="impact">
+        <div class="main-section project-section scroll-margin" id="impact">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -296,7 +296,7 @@
 
         </div>
 
-        <div class="main-section project-section" id="research">
+        <div class="main-section project-section scroll-margin" id="research">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -352,7 +352,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="design-process">
+        <div class="main-section project-section scroll-margin" id="design-process">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -419,7 +419,7 @@
             <img src="./Website Images/LLP Application/LLP-Dashboard Mid Fi.jpg" class="round-img" alt="Dashboard Screen Mid Fi">
         </div>
 
-        <div class="main-section project-section" id="final-design">
+        <div class="main-section project-section scroll-margin" id="final-design">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -434,7 +434,7 @@
             </p>
         </div>
 
-        <a href="#"><button class="btn-primary" id="prototype-btn">View the Live Prototype Here</button></a>
+        <a href="https://www.figma.com/proto/kTmTecSWGc10wAhpvQzs6k/Labor-Law-Pro-Application-Prototype?page-id=12%3A1992&node-id=4002-61141&viewport=2249%2C71%2C0.11&t=9EbMcd7UDf5VMakl-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=4002%3A61141&show-proto-sidebar=1" target="_blank"><button class="btn-primary" id="prototype-btn">View the Live Prototype Here</button></a>
 
         <div class="project-image round-img" id="final-designs">
             <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Login.jpg" alt="Login Screen">
@@ -444,7 +444,7 @@
             <img src="./Website Images/LLP Application/Screen Mockups with Background/LLP - Permissions.jpg" alt="Permissions Screen">
         </div>
 
-        <div class="main-section project-section" id="future-steps">
+        <div class="main-section project-section scroll-margin" id="future-steps">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -494,7 +494,7 @@
             </div>
         </div>
 
-        <div class="project-nav-buttons" id="other-projects" id="margin50">
+        <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
             <a href="./index.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./pristine clean case study.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
