--- a/The Vault.html
+++ b/The Vault.html
@@ -33,7 +33,7 @@
                 The Vault
             </h1>
             <p class="p2">
-                Welcome to my personal archive of personal and professional projects that give a more in-depth glimpse into the content I enjoy creating. I hope you can take some inspiration from my designs as I have from so many other great designers. Enjoy!
+                Welcome to my personal archive of projects that give a more in-depth glimpse into the content I enjoy creating. I hope you can take some inspiration from my designs as I have from so many other great designers. Enjoy!
             </p>
         </div>
         <div class="resume-img half round-img">
