--- a/ignite.html
+++ b/ignite.html
@@ -34,6 +34,18 @@
         </div>
     </div>
 
+    <div class="side-nav">
+        <a href="#intro-2">Introduction</a>
+        <a href="#logo">Logo</a>
+        <a href="#Uniforms">Uniforms</a>
+        <a href="#apparel">Apparel</a>
+        <a href="#schedule">Schedule</a>
+        <a href="#other-projects">Other Projects</a>
+        <a href="#intro">Back to Top<img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
+    </div>
+
+
+
 
     <div class="side-nav-2">
         <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
@@ -90,23 +102,23 @@
 
 
         <div class="round-img ignite-images" id="margin50">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 2.jpg" alt="Katsbrune Business Card Mockup">
+            <img id="intro-2" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 2.jpg" alt="Katsbrune Business Card Mockup">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 3.jpg" alt="Ignite Slide 3">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 4.jpg" alt="Ignite Slide 4">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 5.jpg" alt="Ignite Slide 5">
+            <img id="logo" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 5.jpg" alt="Ignite Slide 5">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 6.jpg" alt="Ignite Slide 6">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 7.jpg" alt="Ignite Slide 7">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 8.jpg" alt="Ignite Slide 8">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 9.jpg" alt="Ignite Slide 9">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 10.jpg" alt="Ignite Slide 10">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 11.jpg" alt="Ignite Slide 11">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 12.jpg" alt="Ignite Slide 12">
+            <img id="Uniforms" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 12.jpg" alt="Ignite Slide 12">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 13.jpg" alt="Ignite Slide 13">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 14.jpg" alt="Ignite Slide 14">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 15.jpg" alt="Ignite Slide 15">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 16.jpg" alt="Ignite Slide 16">
+            <img style="scroll-margin-top: -10x;" id="apparel" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 16.jpg" alt="Ignite Slide 16">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 17.jpg" alt="Ignite Slide 17">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 18.jpg" alt="Ignite Slide 18">
+            <img id="schedule" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 18.jpg" alt="Ignite Slide 18">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 19.jpg" alt="Ignite Slide 19">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 20.jpg" alt="Ignite Slide 20">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 21.jpg" alt="Ignite Slide 21">
@@ -117,7 +129,7 @@
 
         </div>
 
-        <div class="project-nav-buttons" id="margin50">
+        <div class="project-nav-buttons scroll-margin" id="other-projects" id="margin50">
             <a href="./arrow.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./flyers.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
