--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,9 @@
         </ul>
     </div> 
 
-    <button class="btn-2">Let's Work Together!</button>
+    <a href="mailto: benjaminqthomas@gmail.com">
+        <button class="btn-2">Let's Work Together!</button>
+    </a>
     <!-- <div class="nav-socials">
         <a href="./index.html"><img src="./Website Images/Icons/IG Icon - grey fill.svg" alt="instagram icon"></a>
         <a href="./index.html"><img src="./Website Images/Icons/LinkedIn Icon - grey fill.svg" alt="LinkedIn icon"></a>
