--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,7 @@
             <a href="./cookbook.html">
                 <div class="project-card">
                     <div class="project-card-img">
-                            <img src="./Website Images/Mom's Cookbook/Cookbook Front Cover Mockup.jpg" class="pc-img" alt="#">
+                            <img src="./Website Images/Mom's Cookbook/Actual Cookbook Photos/front cover standing.jpg" class="pc-img" alt="#">
                     </div>
                     <div class="project-card-content">
                         <div class="project-card-type">
