ignite side nav updates complete

--- a/ignite.html
+++ b/ignite.html
@@ -112,14 +112,14 @@
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 9.jpg" alt="Ignite Slide 9">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 10.jpg" alt="Ignite Slide 10">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 11.jpg" alt="Ignite Slide 11">
-            <img id="Uniforms" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 12.jpg" alt="Ignite Slide 12">
+            <img style="scroll-margin-top: 10rem;" id="Uniforms" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 12.jpg" alt="Ignite Slide 12">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 13.jpg" alt="Ignite Slide 13">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 14.jpg" alt="Ignite Slide 14">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 15.jpg" alt="Ignite Slide 15">
-            <img style="scroll-margin-top: -10x;" id="apparel" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 16.jpg" alt="Ignite Slide 16">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 17.jpg" alt="Ignite Slide 17">
-            <img id="schedule" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 18.jpg" alt="Ignite Slide 18">
-            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 19.jpg" alt="Ignite Slide 19">
+            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 16.jpg" alt="Ignite Slide 16">
+            <img style="scroll-margin-top: 40rem;" id="apparel" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 17.jpg" alt="Ignite Slide 17">
+            <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 18.jpg" alt="Ignite Slide 18">
+            <img style="scroll-margin-top: 40rem;" id="schedule" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 19.jpg" alt="Ignite Slide 19">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 20.jpg" alt="Ignite Slide 20">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 21.jpg" alt="Ignite Slide 21">
             <img src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy 22.jpg" alt="Ignite Slide 22">
