hamburger menu nav update (not finished) commit

--- a/nav.html
+++ b/nav.html
@@ -26,11 +26,7 @@
     <a href="mailto: benjaminqthomas@gmail.com">
         <button class="btn-2">Let's Work Together!</button>
     </a>
-    <!-- <div class="nav-socials">
-        <a href="./index.html"><img src="./Website Images/Icons/IG Icon - grey fill.svg" alt="instagram icon"></a>
-        <a href="./index.html"><img src="./Website Images/Icons/LinkedIn Icon - grey fill.svg" alt="LinkedIn icon"></a>
-        <a href="./index.html"><img src="./Website Images/Icons/Email-icon.svg" alt="Email icon" id="email-icon"></a>
-    </div> -->
+
 
     
     <div class="menu" id="toggle-menu">
@@ -41,8 +37,7 @@
 
 </nav>
 
-<div class="mobile-menu" id="mobileMenu">
-    <!-- <div class="close-btn" id="closeBtn">&#10006;</div> -->
+<div class="mobile-menu show" id="mobileMenu">
     <ul class="mobile-nav-links">
         <li><a href="index.html">WORK</a></li>
         <li><a href="About.html">ABOUT</a></li>
