Navigation Update Finally working

--- a/Footer.html
+++ b/Footer.html
@@ -26,7 +26,7 @@
                 <li><a href="About.html">ABOUT</a></li>
                 <li><a href="Resume.html">RESUME</a></li>
                 <li><a href="Contact.html">CONTACT</a></li>
-                <li><a href="The Vault.html">THE VAULT</a></li>
+                <li><a href="The-Vault.html">THE VAULT</a></li>
             </ul>
         </div> 
 
