--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <title>Portfolio Home Page</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
+    <script src="nav-script.js" defer></script>
+
+
 
 
 </head>
 <body>
     <div id="nav-container">
-        <script>
-            fetch('nav.html')
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById('nav-container').innerHTML = html;
-                });
-        </script>
     </div>
 
 
