--- a/nav.html
+++ b/nav.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="index.js" defer></script>
 
-
-</head>
-<body>
- 
 <nav id="navbar">
     <div class="nav-logo"><a href="index.html"><img src="./Website Images/Logo/Ben Thomas Official Logo Assets NEW_BT Full Horiz_light grey.svg" alt="Ben Thomas Logo"></a></div>
     <div class="nav-links">
@@ -19,7 +7,7 @@
             <li><a href="About.html">ABOUT</a></li>
             <li><a href="Resume.html">RESUME</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
-            <li><a href="The Vault.html">THE VAULT</a></li>
+            <li><a href="The-Vault.html">THE VAULT</a></li>
         </ul>
     </div> 
 
@@ -37,25 +25,44 @@
 
 </nav>
 
-<div class="mobile-menu show" id="mobileMenu">
+<div class="mobile-menu" id="mobileMenu">
     <ul class="mobile-nav-links">
         <li><a href="index.html">WORK</a></li>
         <li><a href="About.html">ABOUT</a></li>
         <li><a href="Resume.html">RESUME</a></li>
         <li><a href="Contact.html">CONTACT</a></li>
-        <li><a href="The Vault.html">THE VAULT</a></li>
+        <li><a href="The-Vault.html">THE VAULT</a></li>
     </ul>
+
+    <!-- <div class="footer-socials contact-socials">
+        <a href="mailto:benjaminqthomas@gmail.com" target="_blank" rel="noopener noreferrer">
+            <div class="icon-border">
+                <img src="./Website Images/Icons/Email Footer Icon.svg" class="footer-icon" alt="Email Icon">
+            </div>                
+        </a>
+
+        <a href="https://www.linkedin.com/in/ben-q-thomas" target="_blank" rel="noopener noreferrer">
+            <div class="icon-border">
+                <img src="./Website Images/Icons/LinkedIn Footer Icon.svg" class="footer-icon" alt="LinkedIn Icon">
+            </div>
+        </a>
+
+        <a href="https://www.instagram.com/benqthomas" target="_blank" rel="noopener noreferrer">
+            <div class="icon-border">
+                <img src="./Website Images/Icons/Instagram Footer Icon.svg" class="footer-icon" alt="Instagram Icon">
+             </div>
+         </a>
+
+
+    </div> -->
+
+
     <div class="mobile-social-icons">
-        <a href="./index.html"><img src="./Website Images/Icons/IG Icon - grey fill.svg" alt="instagram icon"></a>
-        <a href="./index.html"><img src="./Website Images/Icons/LinkedIn Icon - grey fill.svg" alt="LinkedIn icon"></a>
-        <a href="./index.html"><img src="./Website Images/Icons/Email-icon.svg" alt="Email icon"></a>
+        <a href="mailto: benjaminqthomas@gmail.com" target="_blank"><img src="./Website Images/Icons/Email Footer Icon.svg" alt="Email icon"></a>
+
+        <a href="https://www.linkedin.com/in/ben-q-thomas" target="_blank"><img src="./Website Images/Icons/LinkedIn Footer Icon.svg" alt="LinkedIn icon"></a>
+        <a href="https://www.instagram.com/benqthomas" target="_blank"><img src="./Website Images/Icons/Instagram Footer Icon.svg" alt="Instagram icon"></a>
     </div>
 </div>
 
-
-
-    <script src="index.js"></script>
-  
-</body>
-</html>
 
