--- a/social-media.html
+++ b/social-media.html
@@ -6,18 +6,13 @@
     <title>University of Kentucky Social Media Posts</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
+    <script src="nav-script.js" defer></script>
+
 
 
 </head>
 <body class>
     <div id="nav-container">
-        <script>
-            fetch('nav.html')
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById('nav-container').innerHTML = html;
-                });
-        </script>
      </div>   
 
     <div class="project-hero-container hidden">
